[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "melplot"
authors = [{name = "Zachary Moon", email = "zmoon92@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.7"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.urls]
Home = "https://github.com/zmoon/melplot"

[project.optional-dependencies]
test = [
    "mypy",
]
